--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_section4">Related</string>
+    <string name="check_update">Check Update</string>
 </resources>
