--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="check_update">Check Update</string>
     <string name="disconnecting">Disconnecting</string>
     <string name="refresh">Refresh</string>
+    <string name="action_search">Search</string>
+    <string name="search_hint">Search Title</string>
+    <string name="search_result">Search Result</string>
 </resources>
