--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -15,6 +15,6 @@
     <string name="disconnecting">失去连接</string>
     <string name="refresh">刷新</string>
     <string name="action_search">搜索</string>
-    <string name="search_result">搜索结果</string>
+    <string name="search">搜索</string>
     <string name="search_hint">搜索标题</string>
 </resources>
