--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="refresh">Refresh</string>
     <string name="action_search">Search</string>
     <string name="search_hint">Search Title</string>
-    <string name="search_result">Search Result</string>
+    <string name="search">Search</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
