1.Start to implement Webservice related things

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -17,4 +17,5 @@
     <string name="action_search">搜索</string>
     <string name="search">搜索</string>
     <string name="search_hint">搜索标题</string>
+    <string name="latest_news">最新消息</string>
 </resources>
