--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,10 @@
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="latest_news">Latest News</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title">Title</string>
+    <string name="date_time">Time:</string>
+    <string name="page_view">Page views:</string>
+    <string name="editor">Editor:</string>
+    <string name="article">Article</string>
 </resources>
